Fixed issues with the tests